--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Catalogue Stoom Clermont-Ferrand - Version mobile avec slider">
-    <title>Catalogue Stoom Clermont-Ferrand</title>
+    <title>Découvrez STOOM Clermont-Ferrand</title>
     <style>
         body {
             font-family: Arial, sans-serif;
