--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Découvrez STOOM Clermont-Ferrand</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: Roboto, sans-serif;
             background-color: #f4f4f4;
             margin: 0;
             padding: 0;
