--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Découvrez STOOM Clermont-Ferrand</title>
     <style>
         body {
-            font-family: Roboto, sans-serif;
+            font-family: Arial, sans-serif;
             background-color: #f4f4f4;
             margin: 0;
             padding: 0;
@@ -66,41 +66,22 @@
 <body>
 
 <header>
-    <h1>Découvrez STOOM Clermont Ferrand</h1>
+    <h1>Découvrez STOOM Clermont-Ferrand</h1>
 </header>
 
 <div class="slider-container">
-<div class="slides"><img src="1.jpg" alt="Catalogue page 1"></div>
-<div class="slides"><img src="2.jpg" alt="Catalogue page 2"></div>
-<div class="slides"><img src="3.jpg" alt="Catalogue page 3"></div>
-<div class="slides"><img src="4.jpg" alt="Catalogue page 4"></div>
-<div class="slides"><img src="5.jpg" alt="Catalogue page 5"></div>
-<div class="slides"><img src="6.jpg" alt="Catalogue page 6"></div>
+    <div class="slides"><img src="1.jpg" alt="Catalogue page 1"></div>
+    <div class="slides"><img src="2.jpg" alt="Catalogue page 2"></div>
+    <div class="slides"><img src="3.jpg" alt="Catalogue page 3"></div>
+    <div class="slides"><img src="4.jpg" alt="Catalogue page 4"></div>
+    <div class="slides"><img src="5.jpg" alt="Catalogue page 5"></div>
+    <div class="slides"><img src="6.jpg" alt="Catalogue page 6"></div>
 
-<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-<a class="next" onclick="plusSlides(1)">&#10095;</a>
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div>
 
 <script>
-let slideIndex = 1;
-showSlides(slideIndex);
-
-function plusSlides(n) {
-    showSlides(slideIndex += n);
-}
-
-function showSlides(n) {
-    let i;
-    let slides = document.getElementsByClassName("slides");
-    if (n > slides.length) {slideIndex = 1}    
-    if (n < 1) {slideIndex = slides.length}
-    for (i = 0; i < slides.length; i++) {
-        slides[i].style.display = "none";  
-    }
-    slides[slideIndex-1].style.display = "block";  
-}
-<script>
-// Fonctionnalité actuelle pour les flèches
 let slideIndex = 1;
 showSlides(slideIndex);
 
@@ -140,7 +121,6 @@ document.addEventListener('touchend', function(e) {
     }
 }, false);
 </script>
-
 
 <footer>
     <p>&copy; 2024 Stoom Clermont-Ferrand. Tous droits réservés.</p>
