--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <body>
 
 <header>
-    <h1>Découvrez STOOM Clermont-Ferrand</h1>
+    <h1>SWIPE CONNARD !</h1>
 </header>
 
 <div class="slider-container">
